# helium-columnar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  pyhelium-wheels.yml
benches/: coders.rs  datasets.rs  pipelines.rs  slice.rs
docs/: PERFORMANCE.md  ROADMAP.md
duckdb/: Cargo.toml  README.md  smoke.sh
duckdb/ci/: extension-matrix.yml
duckdb/examples/: make_fixtures.rs
duckdb/packaging/: community-extension-submission.md  matrix.md  package.sh
duckdb/src/: lib.rs  nested.rs  prune.rs  writer.rs
examples/: arrow_workflow.rs  datafusion_smoke.rs  smoke_arrow.rs
python/: Cargo.toml  PACKAGING.md  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_arrow.py  test_codec.py  test_errors.py  test_file.py
scripts/: README.md  csv_to_avro.py  donext_benchmark.sh  donext_benchmark_all.sh  donext_format_comparison.py  fetch-fixtures.sh
src/: lib.rs  main.rs
src/arrow/: from_arrow.rs  mod.rs  schema.rs  to_arrow.rs
src/catalog/: mod.rs
src/cli/: catalog.rs  compare.rs  convert.rs  infer_schema.rs  loader.rs  mod.rs  optimize_schema.rs  slice.rs  sql.rs  stats.rs  verify.rs
src/codec/: default.rs  header.rs  mod.rs  top_level.rs  typed.rs
src/coders/: bitpack.rs  bitstream.rs  delta.rs  delta_of_delta.rs  deltamin.rs  elias_fano.rs  gorilla.rs  leb128.rs  lz4.rs  mod.rs  numeric.rs  pcodec.rs  rle.rs  snappy.rs  zstd_coder.rs
src/core/: canonicalize.rs  coder.rs  error.rs  file.rs  footer_stats.rs  mod.rs  pipeline.rs  registry.rs  schema.rs
src/optimizer/: candidates.rs  mod.rs  picker.rs  recursive.rs
src/schema/: avro.rs  csv.rs  encodings.rs  json.rs  mod.rs  parquet.rs
src/sql/: exec.rs  mod.rs  pruning.rs
tests/: arrow_record_batch.rs  avro_5g_mr_report.rs  avro_roundtrip.rs  catalog_roundtrip.rs  cli.rs  cli_avro_roundtrip.rs  cli_catalog.rs  cli_convert_bidirectional.rs  cli_convert_chunked.rs  cli_convert_multistripe.rs  cli_csv_struct_flatten.rs  cli_json_nested_roundtrip.rs  cli_optimize_schema.rs  cli_slice.rs  cli_sql.rs  cli_stats.rs  codec_roundtrip.rs  coder_properties.rs  compression_parity.rs  compression_report.rs  converter.rs  cross_format_semantic_types.rs  datafusion_correctness.rs  datafusion_pushdown.rs  datafusion_pushdown_equality.rs  datafusion_sql.rs  datafusion_statistics.rs  date_datetime_roundtrip.rs  decimal128_roundtrip.rs  deep_nesting_roundtrip.rs  dictionary_roundtrip.rs  file_format.rs  file_format_modes.rs  file_format_stats.rs  file_format_v5.rs  format_comparison_report.rs  inferrers.rs  list_roundtrip.rs  map_roundtrip.rs  nested_schema_parity.rs  (+13 more)
