[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyhelium"
version = "0.1.0"
description = "Python bindings for the Helium columnar compression library"
readme = "README.md"
requires-python = ">=3.9"
# numpy is required for compress/decompress/write_he/read_he.
dependencies = ["numpy>=1.20"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
# Arrow / pandas interop (write_table / read_table). pyarrow is only needed at
# runtime for those two functions; the numpy API works without it.
arrow = ["pyarrow>=14"]
pandas = ["pyarrow>=14", "pandas>=1.5"]
dev = ["pytest>=7.0", "pyarrow>=14", "pandas>=1.5"]

[tool.maturin]
# The Python module name is `pyhelium` (matches the #[pymodule] fn name).
module-name = "pyhelium"
# Build from this directory's Cargo.toml.
manifest-path = "Cargo.toml"
# Build a single stable-ABI (abi3) wheel that works on CPython >= 3.9. The
# `abi3-py39` pyo3 feature in Cargo.toml is what makes this a real abi3 build.
features = []

# ---------------------------------------------------------------------------
# cibuildwheel — wheel build matrix (used by CI; see PACKAGING.md).
# Because the extension is abi3 (cp39-abi3), one wheel per platform covers all
# supported CPython versions, so we only build on the lowest (3.9).
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp39-*"
# musllinux/manylinux x86_64 + aarch64 are selected per-platform in CI.
skip = ["*-win32", "*_i686"]
build-frontend = "build"
test-requires = ["pytest", "pyarrow>=14", "pandas>=1.5"]
test-command = "pytest {project}/python/tests -q"

[tool.cibuildwheel.linux]
# A Rust toolchain must exist inside the manylinux/musllinux container.
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
